# Lumina_App_Store

./: .gitignore  CLAUDE.md  README.md  init_db.py  start_here.bat  vercel.json
.github/workflows/: test.yml
Requirements/: Lumina_AppStore_SystemDesign.docx
apps/app_engine/: engine.py  prompt_manager.py  registry.py  scanner.py
apps/app_engine/tests/: test_engine.py
apps/store-frontend/: package.json  pnpm-lock.yaml
apps/store-frontend/src/app/: layout.tsx  page.tsx
apps/store-frontend/src/app/apps/[appId]/: page.tsx
apps/store-frontend/src/app/authoring/: page.tsx
apps/store-frontend/src/app/authoring/[appId]/: page.tsx
apps/store-frontend/src/app/menu-apps/: page.tsx
apps/store-frontend/src/components/: AppCard.tsx  ChatTestPanel.tsx  FileTree.tsx  FilterSidebar.tsx  SearchBar.tsx  StatusBadge.tsx  SystemBadge.tsx
apps/store-frontend/src/lib/: api.ts  authoring-api.ts  engine-api.ts
apps/store_backend/: config.py  database.py  main.py  pyproject.toml  render.yaml  requirements.txt
apps/store_backend/models/: __init__.py  app.py  base.py  vendor.py
apps/store_backend/routers/: admin.py  apps.py  authoring.py
apps/store_backend/schemas/: __init__.py  app_schemas.py  common.py  vendor_schemas.py
apps/store_backend/tests/: conftest.py  test_admin_api.py  test_apps_api.py  test_authoring_api.py
examples/crm-connector/: config.json  refs.md  skill.md
examples/crm-connector/tools/: api.json
infra/: docker-compose.yml
